--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "seed": "ts-node ./scripts/loadDb.ts"
   },
   "dependencies": {
     "@datastax/astra-db-ts": "^1.5.0",
@@ -16,7 +17,8 @@
     "openai": "^4.87.3",
     "puppeteer": "^24.4.0",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "ts-node": "^10.9.2"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
