--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,5 @@
 {
   "compilerOptions": {
-    // "target": "esnext",
     "target": "ES2017",
     "module": "commonjs",
     "lib": ["dom", "dom.iterable", "esnext"],
@@ -9,9 +8,8 @@
     "strict": false,
     "noEmit": true,
     "esModuleInterop": true,
-    // "module": "esnext",
     "forceConsistentCasingInFileNames": true,
-    "moduleResolution": "bundler",
+    "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
     "jsx": "preserve",
